# daily

./: .gitignore  CALENDAR_UPGRADE.md  CLAUDE.md  DATE_FIX_REPORT.md  FAQ.md  QUICKSTART_EMAIL.md  README.md  all_frontend_files.txt  all_python_files.txt  debug_dates.py  pyproject.toml  restore_files.py  start_server.sh
backend/app/: main.py  scheduler.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: __init__.py  keywords.py  papers.py  subscribers.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/services/: __init__.py  arxiv_fetcher.py  email_service.py  hf_client.py  llm_client.py  types.py
backend/scripts/: daily_ingest.py  migrate_hf_listing_date.py  send_daily_digest.py
backend/tests/: conftest.py
backend/tests/test_models/: test_entities.py
frontend/: app.js  index.html  styles.css
scripts/: INSTALL_SERVICE.md  crontab.txt  daily_ingest_cron.sh  papers.service  test_ingest_once.sh
