[project]
name = "papers"
version = "0.1.0"
description = "Daily Paper Insights - Automated pipeline for arXiv paper analysis with LLM-powered insights"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic[email]>=2.9.0",
    "httpx>=0.27.2",
    "openai>=1.54.0",
    "selectolax>=0.3.24",
    "feedparser>=6.0.11",
    "PyMuPDF>=1.24.13",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "apscheduler>=3.10.4",
    "sib-api-v3-sdk>=7.6.0",
    "rich>=13.9.3",
    "pytest>=8.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
